--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
 *.css linguist-language=java 
+*.yml linguist-language=Java 
+*.html linguist-language=Java 
+*.js linguist-language=Java 
+*.xml linguist-language=Java
+*.css linguist-language=Java
